Update: change the routing
